fixed foldertree popup for smartphones fixed font weight for sender in mail grid on iOS

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -706,3 +706,9 @@ h4.mail-attachment-preview {
         }
     }
 }
+/* smartphone */
+@media (max-width: 480px) {
+    .vgrid-cell.mail .from span.person {
+        font-weight: 600;
+    }
+}
